# grpc-benchmarking

./: Makefile  README.md
dotnet/: GrpcGreeter.csproj  Program.cs  appsettings.Development.json  appsettings.json
dotnet/Properties/: launchSettings.json  launchSettings.json.development
dotnet/Protos/: hello.proto
dotnet/Services/: GreeterService.cs
go/: .gitignore  go.mod  go.sum
go/cmd/grpc-benchmarking-go-server/: hello.pb.go  hello_grpc.pb.go  main.go
java/: .gitignore  build.gradle  settings.gradle
java/src/main/java/io/amsokol/grpc/benchmarking/: HelloServer.java
java/src/main/proto/: hello.proto
node/: .eslintrc.json  package.json  tsconfig.json
node/src/: greeter.ts  server.ts
node/src/protogen/: hello_grpc_pb.d.ts  hello_grpc_pb.js  hello_pb.d.ts  hello_pb.js  index.ts
proto/: hello.proto
rust/: Cargo.toml
rust/src/: main.rs
