[package]
name = "grpc-benchmarking-rust"
version = "0.1.0"
authors = ["Aleksandr Sokolovskii <github@amsokol.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the gRPC server
name = "grpc-benchmarking-rust-server"
path = "src/main.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
rand = "0.7"

[build-dependencies]
tonic-build = "0.2"
